--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ repositories {
 	// for more information about repositories.
 }
 
+runClient {
+	args '--username=viandox42'
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
